# job.ai

./: README.md  pyproject.toml
src/job_application/: crew.py  main.py
src/job_application/config/: agents.yaml  tasks.yaml
src/job_application/data/: jobs.csv
src/job_application/tools/: job_tool.py
