[project]
name = "job_application"
version = "0.1.0"
description = "job-application using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
job_application = "job_application.main:run"
run_crew = "job_application.main:run"
train = "job_application.main:train"
replay = "job_application.main:replay"
test = "job_application.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
